Fixed collapse arrow style

--- a/client/src/components/HowItWorksComponent/QuestionBox/QuestionBox.module.sass
+++ b/client/src/components/HowItWorksComponent/QuestionBox/QuestionBox.module.sass
@@ -1,14 +1,7 @@
 .qstnBox
-
- 
-  span:hover
-    transform: rotate(-90deg)
-    transition: all 0.2s
-  
   span
     color: #377DFF
     justify-content: flex-end
-    
 
   div
     ul
